syntax = "proto3";
package messag;

option go_package = "github.com/jxskiss/nonamegw/proto/messag;messag";

import "packet.proto";
import "protocol.proto";

message UpgoingMessage {
    protocol.Packet packet = 1;
    protocol.Connection conn = 2;
}

message DowngoingMessage {
    oneof data {
        protocol.Packet packet = 1;
        bytes bin_packet = 2;
    }
    repeated string conn_ids = 3;
}

message BroadcastMessage {
    // TODO
}

message TokenKey {
    string key = 1;
    int64 enable_time_sec = 2;
}

message CometConfiguration {
    string token_key = 1;
    repeated TokenKey old_token_keys = 2;
}
